--- a/src/assets/style/sidebar.scss
+++ b/src/assets/style/sidebar.scss
@@ -1,7 +1,8 @@
 #app {
+
   .main-container {
     min-height: 100%;
-    transition: margin-left 0.28s;
+    transition: margin-left .28s;
     margin-left: $sideBarWidth;
     position: relative;
   }
@@ -21,8 +22,7 @@
 
     // reset element-plus css
     .horizontal-collapse-transition {
-      transition: 0s width ease-in-out, 0s padding-left ease-in-out,
-        0s padding-right ease-in-out;
+      transition: 0s width ease-in-out, 0s padding-left ease-in-out, 0s padding-right ease-in-out;
     }
 
     .scrollbar-wrapper {
@@ -56,19 +56,9 @@
     .el-menu {
       border: none;
       height: 100%;
-      max-width: 100% !important;
-     
-      .el-menu-item {
-        width: 100%;
-        margin: 0;
-      }
-      &.el-menu--collapse{
-        margin: 0;
-      }
-     
+      // width: 100% !important;
     }
- 
- 
+
     // menu hover
     .submenu-title-noDropdown,
     .el-submenu__title {
@@ -77,11 +67,11 @@
       }
     }
 
-    .is-active > .el-submenu__title {
+    .is-active>.el-submenu__title {
       color: $subMenuActiveText !important;
     }
 
-    & .nest-menu .el-submenu > .el-submenu__title,
+    & .nest-menu .el-submenu>.el-submenu__title,
     & .el-submenu .el-menu-item {
       min-width: $sideBarWidth !important;
       background-color: $subMenuBg !important;
@@ -90,21 +80,10 @@
         background-color: $subMenuHover !important;
       }
     }
-    .submenu-title-noDropdown{
-      max-height: 46px;
-      height: 46px;
-      div{
-        height: 100%;
-        align-items: center;
-        padding: 0 !important;
-        display: flex !important;
-        justify-content: center !important;
-       
-      }
-    }
   }
 
   .hideSidebar {
+   
     .sidebar-container {
       width: 54px !important;
     }
@@ -119,12 +98,14 @@
 
       .el-tooltip {
         padding: 0 !important;
+        
       }
     }
 
     .el-submenu {
       overflow: hidden;
-      & > .el-submenu__title {
+      &>.el-submenu__title {
+
         .el-submenu__icon-arrow {
           display: none;
         }
@@ -134,8 +115,8 @@
     .el-menu--collapse {
       margin-left: -5px; //需优化的地方
       .el-submenu {
-        & > .el-submenu__title {
-          & > span {
+        &>.el-submenu__title {
+          &>span {
             height: 0;
             width: 0;
             overflow: hidden;
@@ -158,7 +139,7 @@
     }
 
     .sidebar-container {
-      transition: transform 0.28s;
+      transition: transform .28s;
       width: $sideBarWidth !important;
     }
 
@@ -172,6 +153,7 @@
   }
 
   .withoutAnimation {
+
     .main-container,
     .sidebar-container {
       transition: none;
@@ -181,13 +163,13 @@
 
 // when menu collapsed
 .el-menu--vertical {
-  & > .el-menu {
+  &>.el-menu {
     i {
       margin-right: 16px;
     }
   }
 
-  .nest-menu .el-submenu > .el-submenu__title,
+  .nest-menu .el-submenu>.el-submenu__title,
   .el-menu-item {
     &:hover {
       // you can use $subMenuHover
@@ -196,7 +178,7 @@
   }
 
   // the scroll bar appears when the subMenu is too long
-  > .el-menu--popup {
+  >.el-menu--popup {
     max-height: 100vh;
     overflow-y: auto;
 
@@ -213,9 +195,7 @@
       border-radius: 20px;
     }
   }
+  
 }
 
-.el-scrollbar__wrap {
-  overflow: auto;
-  height: 100%;
-}
+.el-scrollbar__wrap { overflow: auto; height: 100%; }
